--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,12 @@
     <androidx.fragment.app.FragmentContainerView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:name="com.proelbtn.sampleapp001.StoreListFragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:id="@+id/fragmentContainerView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:navGraph="@navigation/main_nav"
+        app:defaultNavHost="true" />
 </androidx.constraintlayout.widget.ConstraintLayout>
