Add animation to transition to StoreDetailFragment

--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -11,7 +11,11 @@
         android:label="StoreListFragment" >
         <action
             android:id="@+id/show_detail"
-            app:destination="@id/storeDetailFragment" />
+            app:destination="@id/storeDetailFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/storeDetailFragment"
